<resources>
    <string name="app_name">Азиатская кухня</string>
    <string name="AuthorizationString">Авторизация</string>
    <string name="TelefonString">Укажите свой телефоный номер, что бы сделать заказ</string>
    <string name="BeginButtonString">НАЧАТЬ</string>
    <string name="SkipButtonString">Пропустить</string>
    <string name="TermsOfUseString">Авторизуясь я соглашаюсь с <u>условиями использования</u> </string>
    <string name="BigString">Эффект слабой локализации — отрицательное магнетосопротивление — экспериментально обнаружил в 1948 году в плёнках теллура сотрудник Института точной механики и вычислительной техники АН СССР Ченцов Г. А.[4][5] Отрицательное магнетосопростиление в слабых магнитных полях также наблюдалось в аморфных полупроводниках типа кремния и германия[6]. В течение длительного времени (почти 30 лет) его безуспешно пытались объяснить разного рода теориями. Мэлл и Стук предполагали, что отрицательное магнетосопростивление в аморфных полупроводниках связано с вкладом проводимости по локализованных состониям[6]. Но эта модель не согласуется с экспериментом при высоких концентрациях носителей[7]. В соответствии с развитой Ютакой Тоязавой (англ. Yutaka Toyozawa) моделью, некоторая часть примесных атомов в кристалле могут захватывать лишние электроны и, таким образом, приобретают магнитный момент — так называемый локализованный спин[8]. Поскольку спины взаимодействующих электронов могут быть не параллельны, при рассеянии возможна переориентация спина, то есть, возникает дополнительный неупругий механизм рассеяния носителей тока. Во внешнем магнитном поле происходит ориентация спинов по полю, причём доля ориентированных по полю спинов возрастает с увеличением магнитного поля и понижением температуры. В результате неупругий механизм рассеяния частично выключается магнитным полем, что приводит к уменьшению электрического сопротивления[8]. Однако сравнение теоретических расчётов с экспериментом показывает, для согласия с экспериментом магнитный момент рассеивающего центра должен достигать десятков магнетонов Бора. Адлер предположил простую модель отрицательного магнетосопротивления для двух типов носителей, когда проводимость складывается из транспорта по локализованным состояниям (прыжковый транспорт) и делокализованным состояниям (транспорт в зоне проводимости). В этом случае магнитное поле может приводить к делокализации локализованных состояний, что увеличивает их подвижность и соответственно проводимостью[9]. Однако для объяснения всех экспериментальных данных количественно не существовало удовлетворительной модели[9][10].
                             Выдвигались и другие модели для объяснения отрицательного магнетосопротивления. Однако они не были обобщающими или базировались на заведомо ложных представлениях об увеличении концентрации носителей тока в магнитном поле. И только в 1979 году это явление было объяснено как универсальное явление, которое наблюдается в любом проводнике при определённых условиях[11].
                             Количественная теория слабой локализации была построена в 1981 году группой советских физиков-теоретиков: Борисом Альтшулером, Аркадием Ароновым, Анатолием Ларкиным и Давидом Хмельницким[12][13]. Она была подтверждена многочисленными экспериментами, а авторы за эту работу в 1993 году получили премию Европейского физического общества. В том же 1981 году Юрий Шарвин и Дмитрий Юрьевич Шарвин обнаружили осцилляции сопротивления в тонкостенном цилиндре при изменении магнитного поля[14][13]. В 1985 году экспериментальным путём было подтверждено существование слабой локализации для электромагнитных волн[15][16][17]. Слабая локализация наблюдается и для других явлений волновой природы, таких как сейсмические волны</string>
</resources>