<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LLvertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstTextView"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/authorizationTextView"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:contentDescription="@string/AuthorizationString"
            android:fontFamily="@font/roboto_bold"
            android:lineSpacingExtra="20sp"
            android:paddingStart="16dp"
            android:text="@string/AuthorizationString"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:text="@string/AuthorizationString" />

        <TextView
            android:id="@+id/telefonTextView"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="top|start"

            android:paddingStart="16dp"
            android:paddingRight="27dp"
            android:paddingTop="16dp"
            android:text="@string/TelefonString"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextTextPersonName"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/rounded_edittext"

            android:ems="10"
            android:inputType="textPhonetic|phone"
            android:paddingStart="16dp"
            android:text="+8 800 2222 600" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBegin"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="240dp"
            android:background="@color/colorbegin"
            android:layout_marginEnd="70dp"
            android:text="@string/BeginButtonString" />

        <TextView
            android:id="@+id/textViewSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:gravity="center_horizontal"
            android:text="@string/SkipButtonString"
            android:textColor="@color/colorskip"
             />

        <TextView
            android:id="@+id/textViewTermsOfUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:breakStrategy="high_quality"
            android:gravity="center_horizontal"
            android:text="@string/TermsOfUseString" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>